update some css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Theppasith Nisitsukcharoen</h1>
                 <br>
-                <p class="masthead-subheading font-weight-bold mb-0">เทพสิทธิ์ นิสิตสุขเจริญ (ติวเตอร์)</p>
+                <p class="masthead-subheading font-weight-bold mb-0">เทพสิทธิ์ นิสิตสุขเจริญ </p>
+                <p class="masthead-subheading font-weight-bold mb-0">(ติวเตอร์, ติว)</p>
 
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
